# Rduino

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rduino-config.cmake
example/: CMakeLists.txt  gpio_test  gpio_test.c  spi_test  spi_test.c
include/: r_gpio.h  r_spi.h  rduino.h
src/: r_gpio.c  r_spi.c
